# song_summary

./: .gitignore  README.md  pyproject.toml  render-build.sh  render.yaml
config/: settings.py  urls.py
lyrics/: apps.py  models.py  urls.py  utils.py  views.py
lyrics/migrations/: 0001_initial.py
tests/: test_utils.py
